# psvm

./: .gitignore  .gitmodules  CMakeLists.txt  FindThrust.cmake  Makefile  README.md
cpp/: Makefile  cuda_solvers.cu  dataset.csv  main.cpp  searchgrid_casero.sh  sequential_solvers.cpp  solvers.cpp  svm.h
cpp/mnist/: README.md  dump.py
cpp/predict/: makecsv.py
libpsvm/: CMakeLists.txt
libpsvm/include/psvm/: clamp.h  classifier.h  classifiers.h  cuda_solvers.h  kernels.h  model_io.h  sequential_solvers.h  smo.h  svm.h
libpsvm/src/: classifier.cpp  classifiers.cpp  cuda_solvers.cu  kernels.cpp  model_io.cpp  sequential_solvers.cpp  svm.cpp
mnist/: README.md  dump.py  fetch.sh  idx2csv.py  idx2png.py  idxutils.py
predict/: README.md  template.xcf
psvm-cli/: CMakeLists.txt
psvm-cli/src/: io_formats.cpp  io_formats.h  main.cpp  utils.h
psvm4r/: DESCRIPTION  NAMESPACE
psvm4r/R/: RcppExports.R  psvm4r.R
psvm4r/demo/: linear.R  quadratic.R  rbf.R
psvm4r/man/: LinearKernel-class.Rd  OneAgainstAllCSVC-class.Rd  OneAgainstOneCSVC-class.Rd  PolynomialKernel-class.Rd  RbfKernel-class.Rd  initialize-LinearKernel-method.Rd  initialize-OneAgainstAllCSVC-method.Rd  initialize-OneAgainstOneCSVC-method.Rd  initialize-PolynomialKernel-method.Rd  initialize-RbfKernel-method.Rd  psvm4r-package.Rd
psvm4r/src/: Makevars  RcppExports.cpp  rcpp_psvm4r.cpp
python/: gradient_projection.py  smo.py
src/: classifier.h  cuda_solvers.cu  io_formats.cpp  io_formats.h  main.cpp  main.cu  normalization.h  ref_range.h  sequential_solvers.h  strided_iterator.h  svm.h  utils.h
