CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(psvm LANGUAGES CXX CUDA)

FIND_PACKAGE(Boost 1.60.0 REQUIRED COMPONENTS program_options)
INCLUDE(FindThrust.cmake)

SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda -lcudart -lcudadevrt -lcuda")

ADD_SUBDIRECTORY(libpsvm)
ADD_SUBDIRECTORY(psvm-cli)

