CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(psvm LANGUAGES CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2")
FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS program_options)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF (CMAKE_VERSION VERSION_LESS 3.9)
	# Check CUDA support (CMake 3.8 and earlier)
	INCLUDE(cmake/cuda_support/FindCUDA.cmake)
	FIND_PACKAGE(CUDA 8.0 REQUIRED)
	IF (CUDA_FOUND)
		INCLUDE(cmake/FindThrust.cmake)
		# Assume we're working with an old CUDA stack (ie: not even C++14 in nvcc)
		SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-std=c++11;--expt-extended-lambda)
		SET(CUDA_SEPARABLE_COMPILATION ON)
	ELSE()
		MESSAGE(STATUS "No CUDA support")
	ENDIF()
ELSE()
	# Check CUDA support (CMake 3.9+)
	INCLUDE(CheckLanguage)
	CHECK_LANGUAGE(CUDA)
	IF(CMAKE_CUDA_COMPILER)
		ENABLE_LANGUAGE(CUDA)
		INCLUDE(cmake/FindThrust.cmake)
		SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda")
	ELSE()
		MESSAGE(STATUS "No CUDA support")
	ENDIF()
ENDIF()



ADD_SUBDIRECTORY(libpsvm)
ADD_SUBDIRECTORY(psvm-cli)

