CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(libpsvm LANGUAGES CXX CUDA)

SET(PSVM_COMMON_SOURCE_FILES src/classifier.cpp src/svm.cpp src/kernels.cpp)
LIST(APPEND CUSVM_SOURCE_FILES ${PSVM_COMMON_SOURCE_FILES} src/cuda_solvers.cu)
LIST(APPEND SVM_SOURCE_FILES ${PSVM_COMMON_SOURCE_FILES} src/sequential_solvers.cpp)

SET(PSVM_COMMON_HEADER_FILES include/psvm/classifier.h include/psvm/svm.h)
LIST(APPEND CUSVM_HEADER_FILES ${PSVM_COMMON_HEADER_FILES} include/psvm/cuda_solvers.h)
LIST(APPEND SVM_HEADER_FILES ${PSVM_COMMON_HEADER_FILES} include/psvm/sequential_solvers.h)

ADD_LIBRARY(libcusvm STATIC ${CUSVM_SOURCE_FILES})
ADD_LIBRARY(libsvm   STATIC ${SVM_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(libcusvm PUBLIC ${THRUST_INCLUDE_DIRS} PRIVATE include)
TARGET_INCLUDE_DIRECTORIES(libsvm   PUBLIC ${THRUST_INCLUDE_DIRS} PRIVATE include)

SET_TARGET_PROPERTIES(libcusvm PROPERTIES
                      PREFIX ""
                      PUBLIC_HEADER ${CUSVM_HEADER_FILES}
                      ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
                      LINKER_LANGUAGE CUDA
                      CUDA_STANDARD 14
                      CUDA_SEPARABLE_COMPILATION on
)
SET_TARGET_PROPERTIES(libsvm PROPERTIES
                      PREFIX ""
                      PUBLIC_HEADER ${SVM_HEADER_FILES}
                      ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
                      CXX_STANDARD 17
)

